src/objects/RSM_VP_and_SVP_Mapping__mdt/RSM_VP_and_SVP_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>RSM,VP and SVP Mapping</label>
    <pluralLabel>RSM,VP and SVP Mappings</pluralLabel>
</CustomObject>