src/objects/RSM_VP_and_SVP_Mapping__mdt/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <label>RSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>