src/objects/RSM_VP_and_SVP_Mapping__mdt/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <label>SVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>