src/objects/RSM_VP_and_SVP_Mapping__mdt/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <label>VP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>